# test_git-ci_python

./: .flake8  .isort.cfg  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
module_30_ci_linters/hw/: .mypy.ini  requirements.txt
module_30_ci_linters/hw/.github/workflows/: ci.yml
module_30_ci_linters/hw/app/: __init__.py  models.py  routes.py
module_30_ci_linters/hw/instance/: parking.db
module_30_ci_linters/hw/tests/: conftest.py  factories.py  test_api.py  test_factories.py
